fixed linked html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <h1>Campo Minato</h1>
             </div>
 
+            <div class="score-bar">
+                <h2 id="score">Punteggio: </h2>
+            </div>
+
             <div class="right-bar">
                 <form>
                     <!-- select -->
