--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="score-bar">
-                <h2 id="score">Punteggio: </h2>
+                <h2 id="score"></h2>
             </div>
 
             <div class="right-bar">
